<resources>
    <string name="upgrade_url">http://eu020.fra.samsungsocialhub.com/get/client/dl.do?clientId=</string>
    <string name="account_authenticators">yahoo,msn,work</string>
    <string name="default_external_log_folder">/data/log/z7logs</string>
    <string name="prefs_email_default_path_value">Attachments</string>
    <string name="attachment_close">Close profile</string>
    <string name="authDetails">Authentication Details</string>
    <string name="file_not_found">File not found</string>
    <string name="build_number">20080722-0001</string>
    <string name="about_page_lb_7tp_address">Tech Address:</string>
    <string name="about_page_lb_brand">Brand:</string>
    <string name="about_page_lb_build_date">Build Date:</string>
    <string name="about_page_lb_build_number">Build Number:</string>
    <string name="about_page_lb_version">Version:</string>
    <string name="account_type_page_lb_get_email_from">Choose service provider:</string>
    <string name="account_type_page_lb_select_service">Select address:</string>
    <string name="account_type_page_lb_text_other">Other Email</string>
    <string name="account_type_page_pt_account_type_title">Registration</string>
    <string name="available_services_lb_no_data">No available services</string>
    <string name="available_services_lb_text_isp">{0} provides my email account.</string>
    <string name="available_services_lb_text_menu_more">More about {0}</string>
    <string name="available_services_lb_text_more">My email account provider is not shown.</string>
    <string name="available_services_lb_text_owa">Outlook Web Access is enabled.</string>
    <string name="available_services_lb_text_work">My company provides my email account.</string>
    <string name="available_services_service_has_invitation">{0} has invitation.</string>
    <string name="battery_low_disconnect_notice_info">"Your battery's charge is low, so Social Hub is disconnecting to conserve power."</string>
    <string name="button_accept">Accept</string>
    <string name="button_accept_disclaimer">Accept</string>
    <string name="button_account_details_renew_subscription">Renew Subscription</string>
    <string name="button_agree">Agree</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_connect">Connect</string>
    <string name="button_decline">Decline</string>
    <string name="button_decline_disclaimer">Decline</string>
    <string name="button_details">Details</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_done">Done</string>
    <string name="button_finish">Finish</string>
    <string name="button_hide">Hide</string>
    <string name="button_later">Later</string>
    <string name="button_menu">Menu</string>
    <string name="button_next">Next</string>
    <string name="button_no">No</string>
    <string name="button_now">Now</string>
    <string name="button_ok">OK</string>
    <string name="button_pause">Pause</string>
    <string name="button_prev">Previous</string>
    <string name="button_remind_later">Remind Me Later</string>
    <string name="button_renew_now">Renew Now</string>
    <string name="button_restart_application">Restart Application</string>
    <string name="button_restart_device">Restart Device</string>
    <string name="button_resume">Resume</string>
    <string name="button_save">Save</string>
    <string name="button_save_for_later">Defer</string>
    <string name="button_search">Search</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_skip">Skip</string>
    <string name="button_stop">Stop</string>
    <string name="button_subscribe_now">Subscribe Now</string>
    <string name="button_subscription_checkout_done">Checkout</string>
    <string name="button_try_to_fix">Try to Fix</string>
    <string name="button_tryagain">Try Again</string>
    <string name="button_upgrade_now">Upgrade Now</string>
    <string name="button_view_disclaimer">Disclaimer</string>
    <string name="button_yes">Yes</string>
    <string name="calendar_config_page_bt_merge">Merge entries</string>
    <string name="calendar_config_page_bt_replace">Replace entries</string>
    <string name="calendar_config_page_lb_enable_calendar">Sync Calendar</string>
    <string name="calendar_config_page_lb_instructions">Calendar sync will delete all calendar and task entries on your device. Disable all other calendar sync services before you continue.</string>
    <string name="calendar_config_page_lb_pause_calendar">Pause calendar?</string>
    <string name="calendar_config_page_lb_text">Existing calendar data:</string>
    <string name="calendar_config_page_lb_text_calendar_can_be_synced">"This account's calendar can be synced with your device calendar."</string>
    <string name="calendar_config_page_lb_text_merge">Merge the calendar entries from your account with the entries on your phone.</string>
    <string name="calendar_config_page_lb_text_replace">Replace the calendar entries on your phone with the ones from your account. All existing calendar data will be deleted.</string>
    <string name="calendar_config_page_lb_warning">Only one calendar can be synced with your device. Select Next to change the calendar that is synced.</string>
    <string name="delete_action">Delete</string>
    <string name="forward_action">Forward</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="save_image_action">Save image</string>
    <string name="view_image_action">View image</string>
    <string name="set_as_wallpaper_action">Set as wallpaper</string>
    <string name="refresh_action">Refresh</string>
    <string name="deselect_all_action">Unselect all</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="ignore_conversation_action">Ignore conversation</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folders_action">Folders</string>
    <string name="accounts_action">Accounts</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="remove_cc_bcc_action">Remove Cc/Bcc</string>
    <string name="move_to_mailbox_action">Move to folder</string>
    <string name="view_mode_action">View mode</string>
    <string name="account_setup_options_mail_window_label">Period to sync email</string>
    <string name="account_settings_title_fmt">General settings</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="account_settings_default_summary">Send email from this account by default</string>
    <string name="account_settings_notify_label">Email notifications</string>
    <string name="account_settings_notify_summary">Notify in status bar when email arrives</string>
    <string name="account_settings_mail_check_frequency_label">Email check frequency</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_outgoing_label">Outgoing settings</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_notifications">Notification settings</string>
    <string name="account_settings_sync_task_enable">Sync Tasks</string>
    <string name="account_settings_vibrate_when_label">Vibrate</string>
    <string name="account_settings_vibrate_when_summary">Also vibrate when email arrives</string>
    <string name="account_settings_cc_bcc_label">Always Cc/Bcc myself</string>
    <string name="account_settings_cc_bcc_default_summary">Include my email address in Cc/Bcc line</string>
    <string name="account_settings_cc_bcc_dlg_title">Always Cc/Bcc myself</string>
    <string name="account_settings_vibrate_when_dlg_title">Vibrate</string>
    <string name="account_settings_ringtone">Select ringtone</string>
    <string name="account_settings_servers">Server settings</string>
    <string name="delete_Conv_action">Delete conversation</string>
    <string name="sort">Sort</string>
    <string name="delete_all_action">Delete All</string>
    <string name="account_setting_conversation_mode_summary">Apply conversation view filter to account</string>
    <string name="account_settings_common">Common settings</string>
    <string name="account_settings_forward_with_files_label">Forward with files</string>
    <string name="account_settings_view_mode_label">Split view mode</string>
    <string name="account_settings_signature_label">Signature</string>
    <string name="account_settings_signature_default_value">Sent from my Samsung smartphone on AT&amp;T</string>
    <string name="list_by_action">List by</string>
    <string name="print">Print</string>
    <string name="bg_color">Background color</string>
    <string name="font_size">Font size</string>
    <string name="priority">Priority</string>
    <string name="preview_line_action">Preview line</string>
    <string name="account_settings_mail_email_size_label">Size to retrieve emails</string>
    <string name="account_settings_mail_empty_trash_label">Empty server trash</string>
    <string name="account_settings_mail_empty_trash_message">Delete contents in server trash?</string>
    <string name="account_settings_mail_empty_trash_positive">Yes</string>
    <string name="account_settings_mail_empty_trash_negative">No</string>
    <string name="account_settings_sync_contacts_enable">Sync Contacts</string>
    <string name="account_settings_sync_contacts_summary">Also sync Contacts from this account</string>
    <string name="account_settings_sync_calendar_enable">Sync Calendar</string>
    <string name="account_settings_sync_calendar_summary">Also sync Calendar from this account</string>
    <string name="out_of_office_label">Out of office settings</string>
    <string name="account_settings_conflict_resolution_label">In case of Sync Conflict</string>
    <string name="account_settings_smime_security_options">Security options</string>
    <string name="account_setting_sms_sync">SMS sync</string>
    <string name="account_setting_sms_sync_summary_off">SMS sync off</string>
    <string name="add_signature">Add signature</string>
    <string name="clear_search_results">Remove results</string>
    <string name="account_settings_sync_schedule">Sync schedule</string>
    <string name="account_settings_sync_schedule_summary">Peak/Off-peak schedule control</string>
    <string name="peak_days">Peak days</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="account_settings_smime_set_advanced_security_options_for_email">Set advanced email security options</string>
    <string name="follow_up_flag_Conversation">Flag</string>
    <string name="set_conversation_movealways_action">Conversations always moved</string>
    <string name="search_conversation_action">Search</string>
    <string name="account_settings_sync_task_summary">Sync Tasks from this account</string>
    <string name="move_Conv_action">Move</string>
    <string name="account_setting_conversation_mode_label">Conversation view filter</string>
    <string name="account_settings_textpreview_label">Text preview size</string>
</resources>