<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/account_settings_title_fmt" android:key="account_settings">
        <EditTextPreference android:maxLines="3" android:singleLine="true" android:maxLength="256" android:title="@string/account_settings_description_label" android:key="account_description" android:summary="" android:order="1" android:dialogTitle="@string/account_settings_description_label" android:inputType="textCapWords" />
        <EditTextPreference android:title="@string/account_settings_signature_label" android:key="account_signature" android:summary="" android:order="2" android:defaultValue="@string/account_settings_signature_default_value" android:dialogTitle="@string/account_settings_signature_label" android:inputType="textMultiLine" />
        <CheckBoxPreference android:title="@string/account_settings_default_label" android:key="account_default" android:summary="@string/account_settings_default_summary" android:order="3" />
        <ListPreference android:entries="@array/account_settings_cc_bcc_entries" android:title="@string/account_settings_cc_bcc_label" android:key="account_settings_cc_bcc" android:summary="@string/account_settings_cc_bcc_default_summary" android:order="4" android:defaultValue="none" android:dialogTitle="@string/account_settings_cc_bcc_dlg_title" android:entryValues="@array/account_settings_cc_bcc_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_notifications">
        <CheckBoxPreference android:title="@string/account_settings_notify_label" android:key="account_notify" android:summary="@string/account_settings_notify_summary" android:defaultValue="true" />
        <RingtonePreference android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_ringtone" android:key="account_ringtone" android:dependency="account_notify" android:defaultValue="" android:ringtoneType="notification" />
        <ListPreference android:entries="@array/account_settings_vibrate_when_entries" android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_vibrate_when_label" android:key="account_settings_vibrate_when" android:summary="@string/account_settings_vibrate_when_summary" android:dependency="account_notify" android:defaultValue="never" android:dialogTitle="@string/account_settings_vibrate_when_dlg_title" android:entryValues="@array/account_settings_vibrate_when_values" />
    </PreferenceCategory>
</PreferenceScreen>
