<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/move_always" android:visible="false" android:title="@string/set_conversation_movealways_action" />
    <item android:id="@id/ignore_conversation" android:visible="false" android:title="@string/ignore_conversation_action" />
    <item android:id="@id/read_conversation" android:visible="false" android:title="@string/mark_as_read_action" />
    <item android:id="@id/unread_conversation" android:visible="false" android:title="@string/mark_as_unread_action" />
    <item android:id="@id/search_conversation" android:visible="false" android:title="@string/search_conversation_action" />
    <item android:id="@id/moveConv" android:visible="false" android:title="@string/move_Conv_action" />
    <item android:id="@id/deleteConv" android:visible="false" android:title="@string/delete_Conv_action" />
    <item android:id="@id/fflag_Conv" android:visible="false" android:title="@string/follow_up_flag_Conversation" />
</menu>
