<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@android:drawable/btn_toggle_on_disabled_focused_holo_dark" android:id="@id/refresh" android:title="@string/refresh_action" android:alphabeticShortcut="r" />
    <item android:icon="@android:drawable/btn_toggle_off_disabled_focused_holo_dark" android:id="@id/compose" android:title="@string/compose_action" android:alphabeticShortcut="c" />
    <item android:icon="@android:drawable/btn_star_on_focused_holo_light" android:id="@id/accounts" android:title="@string/accounts_action" />
    <group android:id="@id/deselect_all_group">
        <item android:icon="@drawable/ic_menu_email_deselect_mail" android:id="@id/deselect_all" android:title="@string/deselect_all_action" />
    </group>
</menu>
